# USBMaker

./: .gitignore  Cargo.toml  README  README.md  about.py  dd.py  formatting.py  gui.py  gui.ui  iso.py  license_ui.py  main.py  mount.py  partitioning.py  setup.py  uid_info.py  usb_info.py
USBMaker/: __init__.py  about.py  about_ui.py  about_ui.ui  dd.py  formatting.py  gui.py  gui.ui  iso.py  license_ui.ui  main.py  mount.py  partitioning.py  uid_info.py  usb_info.py
libusbmaker/: Cargo.toml
libusbmaker/src/: lib.rs  parted.rs
src/: copy.rs  dd.rs  error.rs  formatting.rs  iso.rs  main.rs  mount.rs  partitioning.rs  tui.rs
